--- a/views/form.ejs
+++ b/views/form.ejs
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Form</title>
 </head>
 <body>
+    <div class="user-form">
+        <h1 class="title">Login</h1>
     <form action="<%= action  %>" method="POST">
     <input type="text"  name = "email" id = "email" >
      <input type="text" name="password" id= "password">
@@ -13,5 +16,6 @@
         <%= button %>
     </button>
 </form>
+</div>
 </body>
 </html>
